slight homepage change

--- a/themes/pkurg-vesperr/pages/index.htm
+++ b/themes/pkurg-vesperr/pages/index.htm
@@ -257,7 +257,7 @@ url = "/"
           </div>
 
           <div class="col-lg-5 col-md-12" data-aos="fade-up" data-aos-delay="300">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form method="post" role="form" class="php-email-form">
               <div class="form-group">
                 <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
               </div>
